icons and app rename

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ xcuserdata
 *~.nib
 # Thumbnails
 ._*
+
+CrazyEyes.xcodeproj/xcshareddata/xcschemes/emptyExample.xcscheme
+
+CrazyEyes.xcodeproj/project.pbxproj
