--- a/CrazyEyes.xcodeproj/xcshareddata/xcschemes/emptyExample.xcscheme
+++ b/CrazyEyes.xcodeproj/xcshareddata/xcschemes/emptyExample.xcscheme
@@ -16,7 +16,7 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "1D6058900D05DD3D006BFB54"
                BuildableName = "FishEyes.app"
-               BlueprintName = "FishEyes"
+               BlueprintName = "CrazyEyes"
                ReferencedContainer = "container:CrazyEyes.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -34,7 +34,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1D6058900D05DD3D006BFB54"
             BuildableName = "FishEyes.app"
-            BlueprintName = "FishEyes"
+            BlueprintName = "CrazyEyes"
             ReferencedContainer = "container:CrazyEyes.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -53,7 +53,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1D6058900D05DD3D006BFB54"
             BuildableName = "FishEyes.app"
-            BlueprintName = "FishEyes"
+            BlueprintName = "CrazyEyes"
             ReferencedContainer = "container:CrazyEyes.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -71,7 +71,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "1D6058900D05DD3D006BFB54"
             BuildableName = "FishEyes.app"
-            BlueprintName = "FishEyes"
+            BlueprintName = "CrazyEyes"
             ReferencedContainer = "container:CrazyEyes.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
